Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,13 +170,14 @@
     "    welcome_messages = []\n",
     "    for new_employee in new_employees:\n",
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
+    "    \n",
     "    return welcome_messages\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -184,12 +185,10 @@
     {
      "data": {
       "text/plain": [
-       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
-       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
-       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+       "<function __main__.greet_employees()>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
