Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -185,10 +185,12 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.greet_employees()>"
+       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
+       " \"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Meryl, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
