Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,11 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Avi, I'm so glad to be working with you!\",\n",
+       " \"Hi Bob, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_employees = ['Jan', 'Joe', 'Avi', 'bob']\n",
+    "new_employees = ['Jan', 'Joe', 'Avi', 'bob', andy]\n",
     "\n",
     "greet_employees()"
    ]
