Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -224,16 +224,17 @@
        "[\"Hi Jan, I'm so glad to be working with you!\",\n",
        " \"Hi Joe, I'm so glad to be working with you!\",\n",
        " \"Hi Avi, I'm so glad to be working with you!\",\n",
-       " \"Hi Bob, I'm so glad to be working with you!\"]"
+       " \"Hi Bob, I'm so glad to be working with you!\",\n",
+       " \"Hi Andy, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_employees = ['Jan', 'Joe', 'Avi', 'bob', andy]\n",
+    "new_employees = ['Jan', 'Joe', 'Avi', 'bob', 'andy']\n",
     "\n",
     "greet_employees()"
    ]
